# OpenC-DA2UA

./: .gitignore  CMakeLists.txt  Makefile  README.md
build-win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenC-DA2UA.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  opcda2ua.vcxproj  opcda2ua.vcxproj.filters  test_config.vcxproj  test_config.vcxproj.filters  test_logger.vcxproj  test_logger.vcxproj.filters
build-win32/Debug/: opcda2ua.exp  opcda2ua.lib  test_config.exp  test_config.lib
build-win32/Win32/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-win32/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-win32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-win32/opcda2ua.dir/Debug/: opcda2ua.exe.recipe  opcda2ua.ilk
build-win32/opcda2ua.dir/Debug/opcda2ua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win32/test_config.dir/Debug/: test_config.exe.recipe  test_config.ilk
build-win32/test_config.dir/Debug/test_config.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win32/test_logger.dir/Debug/: test_logger.exe.recipe  test_logger.ilk
build-win32/test_logger.dir/Debug/test_logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_logger.lastbuildstate
config/: config.json  nodes.json
docs/: API.md
src/: config.c  config.h  logger.c  logger.h  main.c  opcda_client.c  opcda_client.h  opcua_server.c  opcua_server.h  web_config.c  web_config.h
tests/: test_config.c  test_logger.c
